Issue #175 fixed
GUI editor-panel breaks at width 960px #175

--- a/css/freeboard.css
+++ b/css/freeboard.css
@@ -2316,8 +2316,7 @@ h2.title {
 	}
 
 	#admin-menu {
--		width: 100%;
-+		width: 50%;
+		width: 50%;
 	}
 
 	h2.title {
@@ -2331,9 +2330,7 @@ h2.title {
 	}
 
 	#datasources {
--		width: 100%;
--		float: none;
-+		width: 50%;
+		width: 50%;
 		clear: both;
 	}
 
